--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,11 +1,13 @@
 .footer {
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+
+  padding-top: 6rem;
 }
 
 .inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: var(--mantine-spacing-md) var(--mantine-spacing-md);
 
