--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,12 +5,19 @@ body,
   padding: 0;
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 body {
   font-family: Arial, sans-serif; /* Example font */
   background-color: #f4f4f4; /* Light grey background */
   color: #333; /* Dark grey text */
+}
+
+.content {
+  flex: 1; /* This will make the content section expand to fill available space, pushing the footer down */
 }
 
 .container {
