--- a/src/styles/Content.module.css
+++ b/src/styles/Content.module.css
@@ -38,7 +38,7 @@ video {
 .cityBlock {
   width: 23%;
   margin: 10px;
-  height: 250px;
+  height: 300px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
@@ -65,8 +65,8 @@ video {
 
 .cityBlock img {
   width: 100%;
-  height: 250px;
-  object-fit: cover;
+  height: 300px;
+  object-fit: fill;
   display: block;
   opacity: 90%;
 }
