--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -2,7 +2,8 @@
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
 
-  padding-top: 6rem;
+  padding-top: 2rem;
+  position: static;
 }
 
 .inner {
