--- a/src/styles/Content.module.css
+++ b/src/styles/Content.module.css
@@ -5,9 +5,10 @@
 }
 
 .container {
-  height: 100%;
+  flex: 1 0 auto;
   width: 100%;
   position: relative;
+  padding-bottom: 20rem;
 }
 
 video {
@@ -18,7 +19,7 @@ video {
 }
 
 .searchInput {
-  width: 100%; /* or any specific width you prefer */
+  width: 100%;
 
   max-width: 400px;
   padding: 10px;
@@ -40,7 +41,7 @@ video {
 .cityBlock {
   width: 23%;
   margin: 10px;
-  height: 300px;
+  height: 250px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
@@ -67,7 +68,7 @@ video {
 
 .cityBlock img {
   width: 100%;
-  height: 300px;
+  height: 250px;
   object-fit: fill;
   display: block;
   opacity: 90%;
