--- a/src/styles/AuthenticationTitle.module.css
+++ b/src/styles/AuthenticationTitle.module.css
@@ -8,10 +8,9 @@
     width: 400px;
     height: 600px;
     align-items: center;
-    display: inline-block;
+    display: flex;
     justify-content: center;
     margin-top: 5rem;
-    margin-left: 32rem;
     padding-block: inherit;
 }
 
